force-app/main/default/objects/leaseworks__LLP_Snapshot__c/leaseworks__LLP_Snapshot__c.object-meta.xml
<CustomObject>
    <label>LLP Snapshot</label>
    <nameField>
        <label>LLP Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LLP Snapshot</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>