force-app/main/default/objects/leaseworks__LLP_Snapshot__c/fields/leaseworks__Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Date__c</fullName>
    <formula>leaseworks__History_Tracking__r.leaseworks__Status_Change_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date</label>
    <type>Date</type>
</CustomField>