force-app/main/default/objects/leaseworks__LLP_Snapshot__c/fields/leaseworks__History_Tracking__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__History_Tracking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>History Tracking</label>
    <referenceTo>leaseworks__Asset_History__c</referenceTo>
    <relationshipLabel>LLP Snapshot</relationshipLabel>
    <relationshipName>LLP_Snapshot</relationshipName>
    <type>Lookup</type>
</CustomField>