force-app/main/default/objects/leaseworks__LLP_Snapshot__c/fields/leaseworks__Life_Limited_Part_LLP__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Life_Limited_Part_LLP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Life Limited Part (LLP)</label>
    <referenceTo>leaseworks__Sub_Components_LLPs__c</referenceTo>
    <relationshipLabel>LLP Snapshot</relationshipLabel>
    <relationshipName>LLP_Snapshot</relationshipName>
    <type>Lookup</type>
</CustomField>