force-app/main/default/objects/leaseworks__LLP_Snapshot__c/fields/leaseworks__Thrust_Setting__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Thrust_Setting__c</fullName>
    <label>Thrust Setting</label>
    <length>80</length>
    <type>Text</type>
</CustomField>